--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,14 +5,14 @@
             "label": "C/C++: g++.exe 生成活动文件",
             "command": "D:\\devcpp\\Dev-Cpp\\MinGW64\\bin\\g++.exe",
             "args": [
-                "-std=c++11",
                 // "-stdlib=libc++",
-                "-fdiagnostics-color=always",
-                "-g",
+                // "-fdiagnostics-color=always",
+                // "-g",
                 "${file}",
                 "-o",
+                "${fileDirname}\\${fileBasenameNoExtension}.exe",
                 "-leasyx",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe"
+                "-std=c++11",
             ],
             "options": {
                 "cwd": "${fileDirname}"
