--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,9 +5,8 @@
             "label": "C/C++: g++.exe 生成活动文件",
             "command": "D:\\devcpp\\Dev-Cpp\\MinGW64\\bin\\g++.exe",
             "args": [
-                // "-stdlib=libc++",
-                // "-fdiagnostics-color=always",
-                // "-g",
+                "-fdiagnostics-color=always",
+                "-g",
                 "${file}",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe",
